fix: MA-26- modal box width too much in laptop screen size

--- a/src/utils/modal.scss
+++ b/src/utils/modal.scss
@@ -9,7 +9,7 @@ $laptop-screen: 1200px;
 .modal-box {
   position: fixed;
   background-color: #000;
-  width: 80%;
+  width: 70%;
   height: 550px;
   z-index: 100;
   font-size: large;
@@ -46,13 +46,13 @@ $laptop-screen: 1200px;
 
 @media screen and (min-width: $phone-screen) and (max-width: $md-screen){
   .modal-box {
-    width: 95%;
+    width: 85%;
   }
 }
 
 @media screen and (min-width: $md-screen) and (max-width: $lg-screen){
   .modal-box {
-    width: 95%;
+    width: 85%;
     left: 2%;
   }
 }
@@ -65,6 +65,5 @@ $laptop-screen: 1200px;
 
 @media screen and (min-width: $laptop-screen) {
   .modal-box {
-    // top:30px;
   }
 }
